--- a/countries/templates/countries/country_details.html
+++ b/countries/templates/countries/country_details.html
@@ -1,37 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Country Details</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="p-4">
-<div class="container">
-    <h2>Details: {{ country.name }}</h2>
+{% extends 'base.html' %} {% block content %}
+<h2>{{ country.name }} Details</h2>
+<p><strong>Capital:</strong> {{ country.capital }}</p>
+<p><strong>Population:</strong> {{ country.population }}</p>
+<p><strong>Timezones:</strong> {{ country.timezones|join:", " }}</p>
+<p><strong>Flag:</strong> <img src="{{ country.flag }}" width="100" /></p>
 
-    <p><strong>Code:</strong> {{ country.cca2 }}</p>
-    <p><strong>Capital:</strong> {{ country.capital }}</p>
-    <p><strong>Population:</strong> {{ country.population }}</p>
-    <p><strong>Region:</strong> {{ country.region }}</p>
-    <p><strong>Timezones:</strong> {{ country.timezones|join:", " }}</p>
-    <p><strong>Languages:</strong>
-        <ul>
-            {% for lang in languages %}
-                <li>{{ lang.name }} ({{ lang.code }})</li>
-            {% endfor %}
-        </ul>
-    </p>
+<h3>Regional Countries:</h3>
+<ul>
+  {% for regional_country in regional_countries %}
+  <li>{{ regional_country.name }}</li>
+  {% empty %}
+  <li>No regional countries available.</li>
+  {% endfor %}
+</ul>
 
-    <hr>
-    <h4>Other Countries in {{ country.region }}</h4>
-    <ul>
-        {% for c in same_region %}
-            <li>{{ c.name }}</li>
-        {% empty %}
-            <li>No other countries in this region.</li>
-        {% endfor %}
-    </ul>
+<h3>Languages Spoken:</h3>
+<ul>
+  {% for language in languages %}
+  <li>{{ language.name }}</li>
+  {% endfor %}
+</ul>
 
-    <a href="{% url 'countries_page' %}" class="btn btn-secondary mt-3">Back to List</a>
-</div>
-</body>
-</html>
+<a href="{% url 'country_list' %}" class="btn btn-secondary"
+  >Back to Country List</a
+>
+{% endblock %}
