--- a/countries/templates/countries/country_list.html
+++ b/countries/templates/countries/country_list.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %} {% block content %}
 <h2>Country List</h2>
-<form method="get" class="mb-3">
+<form method="get" class="mb-3 d-flex" role="search">
   <input
     type="text"
     name="search"
     placeholder="Search by name"
-    class="form-control"
+    class="form-control me-2"
     value="{{ request.GET.search }}"
   />
+  <button type="submit" class="btn btn-primary">Search</button>
 </form>
+
 <table class="table table-striped">
   <thead>
     <tr>
