--- a/countries/templates/countries/country_list.html
+++ b/countries/templates/countries/country_list.html
@@ -24,7 +24,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for country in countries %}
+    {% for country in page_obj %}
     <tr>
       <td>{{ country.name }}</td>
       <td>{{ country.cca2 }}</td>
@@ -45,4 +45,43 @@
     {% endfor %}
   </tbody>
 </table>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center">
+    {% if page_obj.has_previous %}
+    <li class="page-item">
+      <a
+        class="page-link"
+        href="?page={{ page_obj.previous_page_number }}&search={{ search_query }}"
+        >Previous</a
+      >
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <span class="page-link">Previous</span>
+    </li>
+    {% endif %}
+
+    <li class="page-item disabled">
+      <span class="page-link">
+        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+      </span>
+    </li>
+
+    {% if page_obj.has_next %}
+    <li class="page-item">
+      <a
+        class="page-link"
+        href="?page={{ page_obj.next_page_number }}&search={{ search_query }}"
+        >Next</a
+      >
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <span class="page-link">Next</span>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
+
 {% endblock %}
